test_case/rust-lang_rust/54161_421815978_16.rs
\n"},"level":"error","spans":[{"file_name":"/checkout/src/test/ui/traits/trait-item-privacy.rs","byte_start":506,"byte_end":515,"line_start":13,"line_end":13,"column_start":1,"column_end":10,"is_primary":false,"text":[{"text:9}],"label":null,"suggested_replacement":null,"suggestion_applicability":null,"expansion":null}],"children":[],"rendered":"error[E0624]: method `a` is private\n  --> /checkout/src/test/ui/traits/trait-item-privacy.rs:94:5\n   |\nLL |     C::a(&S); //~ ERROR method `a` is private\n   |     ^^^^\n\n"}
[00:51:56] {"message":"no associated item named `A` found for type `S` in the current scope","code":{"code":"E0599","explanation":"\nThis error occurs when a method is used on a type which doesn't implement it:\n\nErroneous code example:\n\n